--- a/Areas/Management/Views/PreModule/EditUnit.cshtml
+++ b/Areas/Management/Views/PreModule/EditUnit.cshtml
@@ -23,6 +23,7 @@
 
             <div class="card-footer">
                 <button type="submit" class="btn btn-primary">Submit</button>
+                <a class="btn btn-info" asp-area="" asp-controller="PreModule" asp-action="UnitIndex">Return To Unit</a>
             </div>
         </form>
     </div>
