--- a/Areas/Management/Views/Shared/_AdminDashboard.cshtml
+++ b/Areas/Management/Views/Shared/_AdminDashboard.cshtml
@@ -250,7 +250,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a asp-area="" asp-controller="" asp-action="" class="nav-link">
+                                    <a asp-area="Management" asp-controller="Inventory" asp-action="InventoryOutIndex" class="nav-link">
                                         <i class="fas fa-angle-double-right"></i>
                                         <p>
                                             Inventory Out
@@ -259,7 +259,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a asp-area="" asp-controller="" asp-action="" class="nav-link">
+                                    <a asp-area="Management" asp-controller="Inventory" asp-action="ProductIndex" class="nav-link">
                                         <i class="fas fa-angle-double-right"></i>
                                         <p>
                                             Product
