--- a/Areas/Management/Views/PreModule/CosttypeIndex.cshtml
+++ b/Areas/Management/Views/PreModule/CosttypeIndex.cshtml
@@ -21,21 +21,29 @@
                 <thead>
                     <tr>
                         <th>Cost Tittle</th>
+                        <th>Action</th>
 
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var items in Model)
                     {
-                        <tr>
-                            <td>@items.Costtittle</td>
-                            <td>
-                                <button class="btn btn-link stitchdetails" type="button"
+                    <tr>
+                        <td>@items.Costtittle</td>
+
+                        <td class="float-right">
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                <a asp-action="EditSupplier" asp-route-id="@items.CostId" type="button" class="btn btn-warning">Edit</a>
+                                <button class="btn btn-danger stitchdetails" type="button"
                                         data-assigned-id="@items.CostId" data-text="@items.Costtittle">
                                     Delete
                                 </button>
-                            </td>
-                        </tr>
+                            </div>
+
+
+                        </td>
+                        
+                    </tr>
 
                     }
 
@@ -44,6 +52,7 @@
                     <tr>
 
                         <th>Cost Tittle</th>
+                        <th>Action</th>
 
                     </tr>
                 </tfoot>
@@ -54,27 +63,32 @@
 
 
 
-    <script src="~/assets/plugins/jquery/jquery.min.js"></script>
-    <!-- Bootstrap 4 -->
-    <script src="~/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- DataTables  & Plugins -->
-    <script src="~/assets/plugins/datatables/jquery.dataTables.min.js"></script>
-    <script src="~/assets/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/assets/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
-    <script src="~/assets/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
-    <script src="~/assets/plugins/jszip/jszip.min.js"></script>
-    <script src="~/assets/plugins/pdfmake/pdfmake.min.js"></script>
-    <script src="~/assets/plugins/pdfmake/vfs_fonts.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.print.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="~/assets/dist/js/adminlte.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <!-- Page specific script -->
-    <script>
+
+
+
+    @section Scripts {
+        <script src="~/assets/plugins/jquery/jquery.min.js"></script>
+        <!-- Bootstrap 4 -->
+        <script src="~/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <!-- DataTables  & Plugins -->
+        <script src="~/assets/plugins/datatables/jquery.dataTables.min.js"></script>
+        <script src="~/assets/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+        <script src="~/assets/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+        <script src="~/assets/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
+        <script src="~/assets/plugins/jszip/jszip.min.js"></script>
+        <script src="~/assets/plugins/pdfmake/pdfmake.min.js"></script>
+        <script src="~/assets/plugins/pdfmake/vfs_fonts.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.print.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
+        <!-- AdminLTE App -->
+        <script src="~/assets/dist/js/adminlte.min.js"></script>
+        <!-- AdminLTE for demo purposes -->
+        <!-- Page specific script -->
+
+        <script>
         $(function () {
             $('.stitchdetails').click(function () {
                 var Styleid = $(this).data('assigned-id');
@@ -95,24 +109,19 @@
             });
 
         });
-    </script>
-    <script>
-        $(function () {
-            $("#example1").DataTable({
-                "responsive": true, "lengthChange": false, "autoWidth": false,
-                "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-            }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-            $('#example2').DataTable({
-                "paging": true,
-                "lengthChange": false,
-                "searching": false,
-                "ordering": true,
-                "info": true,
-                "autoWidth": false,
-                "responsive": true,
+        </script>
+        <script>
+            $(function () {
+                $("#example1").DataTable({
+                    "responsive": true, "lengthChange": false, "autoWidth": false,
+                    "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+                }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
             });
-        });
-    </script>
+        </script>
+    }
+
+
+
 </body>
 </html>
 
