--- a/Areas/Management/Views/PreModule/WorkerIndex.cshtml
+++ b/Areas/Management/Views/PreModule/WorkerIndex.cshtml
@@ -24,28 +24,35 @@
                         <th>Name</th>
                         <th>Phone Number</th>
                         <th>NID</th>
+                        <th>Action</th>
 
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var items in Model)
                     {
-                        <tr>
+                    <tr>
 
 
 
-                            <td>@items.WorkerName</td>
-                            <td>@items.WorkerPhno</td>
-                            <td>@items.WorkerNid</td>
+                        <td>@items.WorkerName</td>
+                        <td>@items.WorkerPhno</td>
+                        <td>@items.WorkerNid</td>
 
-                            <td>
-                                <button class="btn btn-link stitchdetails" type="button"
+                        <td class="float-right">
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                <a asp-action="EditSupplier" asp-route-id="@items.WorkerId" type="button" class="btn btn-warning">Edit</a>
+                                <button class="btn btn-danger stitchdetails" type="button"
                                         data-assigned-id="@items.WorkerId" data-text="@items.WorkerName">
                                     Delete
                                 </button>
-                            </td>
+                            </div>
 
-                        </tr>
+
+                        </td>
+
+
+                    </tr>
 
                     }
 
@@ -56,6 +63,7 @@
                         <th>Name</th>
                         <th>Phone Number</th>
                         <th>NID</th>
+                        <th>Action</th>
 
                     </tr>
 
@@ -65,29 +73,29 @@
         <!-- /.card-body -->
     </div>
 
+    @section Scripts {
 
-
-    <script src="~/assets/plugins/jquery/jquery.min.js"></script>
-    <!-- Bootstrap 4 -->
-    <script src="~/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- DataTables  & Plugins -->
-    <script src="~/assets/plugins/datatables/jquery.dataTables.min.js"></script>
-    <script src="~/assets/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/assets/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
-    <script src="~/assets/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
-    <script src="~/assets/plugins/jszip/jszip.min.js"></script>
-    <script src="~/assets/plugins/pdfmake/pdfmake.min.js"></script>
-    <script src="~/assets/plugins/pdfmake/vfs_fonts.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.print.min.js"></script>
-    <script src="~/assets/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="~/assets/dist/js/adminlte.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <!-- Page specific script -->
-    <script>
+        <script src="~/assets/plugins/jquery/jquery.min.js"></script>
+        <!-- Bootstrap 4 -->
+        <script src="~/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <!-- DataTables  & Plugins -->
+        <script src="~/assets/plugins/datatables/jquery.dataTables.min.js"></script>
+        <script src="~/assets/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+        <script src="~/assets/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+        <script src="~/assets/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
+        <script src="~/assets/plugins/jszip/jszip.min.js"></script>
+        <script src="~/assets/plugins/pdfmake/pdfmake.min.js"></script>
+        <script src="~/assets/plugins/pdfmake/vfs_fonts.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.print.min.js"></script>
+        <script src="~/assets/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
+        <!-- AdminLTE App -->
+        <script src="~/assets/dist/js/adminlte.min.js"></script>
+        <!-- AdminLTE for demo purposes -->
+        <!-- Page specific script -->
+        <script>
         $(function () {
             $('.stitchdetails').click(function () {
                 var Styleid = $(this).data('assigned-id');
@@ -108,24 +116,17 @@
             });
 
         });
-    </script>
-    <script>
-        $(function () {
-            $("#example1").DataTable({
-                "responsive": true, "lengthChange": false, "autoWidth": false,
-                "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-            }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-            $('#example2').DataTable({
-                "paging": true,
-                "lengthChange": false,
-                "searching": false,
-                "ordering": true,
-                "info": true,
-                "autoWidth": false,
-                "responsive": true,
+        </script>
+        <script>
+            $(function () {
+                $("#example1").DataTable({
+                    "responsive": true, "lengthChange": false, "autoWidth": false,
+                    "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+                }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+                
             });
-        });
-    </script>
-</body>
+        </script>
+    }
+    </body>
 </html>
 
