--- a/Areas/Management/Views/Inventory/EditInventory.cshtml
+++ b/Areas/Management/Views/Inventory/EditInventory.cshtml
@@ -7,7 +7,7 @@
 <body>
     <div class="card card-primary mt-5">
         <div class="card-header">
-            <h3 class="card-title">Edit Create</h3>
+            <h3 class="card-title">Edit Inventory</h3>
         </div>
         <!-- /.card-header -->
         <!-- form start -->
