--- a/Areas/Management/Views/Inventory/EditProduct.cshtml
+++ b/Areas/Management/Views/Inventory/EditProduct.cshtml
@@ -6,11 +6,11 @@
 <body>
     <div class="card card-primary mt-5">
         <div class="card-header">
-            <h3 class="card-title">Product Create</h3>
+            <h3 class="card-title">Product Edit</h3>
         </div>
         <!-- /.card-header -->
         <!-- form start -->
-        <form asp-action="Productcreate">
+        <form asp-action="EditProduct">
             <div class="card-body">
                 <div class="form-group">
                     <label for="exampleInputPassword1">Product Tittle</label>
@@ -53,4 +53,3 @@
     </script>
 </body>
 </html>
-
