--- a/Areas/Management/Views/PreModule/EditCostType.cshtml
+++ b/Areas/Management/Views/PreModule/EditCostType.cshtml
@@ -11,7 +11,7 @@
         </div>
         <!-- /.card-header -->
         <!-- form start -->
-        <form asp-action="CostType">
+        <form asp-action="EditCostType" method="post">
             <div class="card-body">
                 <div class="form-group">
                     <label for="exampleInputPassword1">Cost Tittle</label>
@@ -24,7 +24,7 @@
                     </select>
                 </div>
             </div>
-            
+
             <!-- /.card-body -->
 
             <div class="card-footer">
@@ -34,4 +34,6 @@
     </div>
 </body>
 </html>
+
+
 
