--- a/Areas/Management/Views/Inventory/InventoryOutIndex.cshtml
+++ b/Areas/Management/Views/Inventory/InventoryOutIndex.cshtml
@@ -14,7 +14,7 @@
             <h3 class="card-title">Exitst InventoryOut </h3>
         </div>
         <a asp-action="InventoryOutCreate" class=" btn btn-primary float-right">Create New</a>
-        <!-- /.card-header -->
+         /.card-header 
         <div class="card-body">
             <table id="example1" class="table table-bordered table-striped">
                 <thead>
@@ -36,12 +36,12 @@
                         <td>@items.Tittle</td>
                         <td>@items.ProductTittle</td>
                         <td>@items.Worker</td>
-                        <td class="float-right">
+                        @*<td class="float-right">
                             <div class="btn-group" role="group" aria-label="Basic example">
                                 <a asp-action="" asp-route-id="@items.Id" type="button" class="btn btn-warning">Edit</a>
                                 <a asp-action="" asp-route-id="@items.Id" type="button" class="btn btn-info">Details</a>
                             </div>
-                        </td>
+                        </td>*@
 
 
                     </tr>
@@ -59,16 +59,16 @@
                 </tfoot>
             </table>
         </div>
-        <!-- /.card-body -->
+         /.card-body 
     </div>
 
 
 
     @section Scripts {
         <script src="~/assets/plugins/jquery/jquery.min.js"></script>
-        <!-- Bootstrap 4 -->
+         Bootstrap 4 
         <script src="~/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <!-- DataTables  & Plugins -->
+         DataTables  & Plugins 
         <script src="~/assets/plugins/datatables/jquery.dataTables.min.js"></script>
         <script src="~/assets/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
         <script src="~/assets/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
@@ -81,10 +81,10 @@
         <script src="~/assets/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
         <script src="~/assets/plugins/datatables-buttons/js/buttons.print.min.js"></script>
         <script src="~/assets/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
-        <!-- AdminLTE App -->
+         AdminLTE App 
         <script src="~/assets/dist/js/adminlte.min.js"></script>
-        <!-- AdminLTE for demo purposes -->
-        <!-- Page specific script -->
+         AdminLTE for demo purposes 
+         Page specific script 
 
         
         <script>
