--- a/Areas/Management/Views/PreModule/CostMapIndex.cshtml
+++ b/Areas/Management/Views/PreModule/CostMapIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PurityERP.Areas.Management.Models.Costtype>
+﻿@model IEnumerable<PurityERP.Areas.Management.Models.CostMap>
 
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -12,40 +12,28 @@
 
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title">Exitst Costs</h3>
+            <h3 class="card-title">Exitst Workers</h3>
         </div>
-        <a asp-action="CostType" class=" btn btn-primary float-right">Create New</a>
+        <a asp-action="CostMap" class=" btn btn-primary float-right">Create New</a>
         <!-- /.card-header -->
         <div class="card-body">
             <table id="example1" class="table table-bordered table-striped">
                 <thead>
                     <tr>
-                        <th>Cost Tittle</th>
+
                         <th>Operation Type</th>
-                        <th>Action</th>
 
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var items in Model)
                     {
-                    <tr>
-                        <td>@items.Costtittle</td>
-                        <td>@items.OperationType</td>
+                        <tr>
 
-                        <td class="float-right">
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                                <a asp-action="EditCostType" asp-route-id="@items.CostId" type="button" class="btn btn-warning">Edit</a>
-                                <button class="btn btn-danger stitchdetails" type="button"
-                                        data-assigned-id="@items.CostId" data-text="@items.Costtittle">
-                                    Delete
-                                </button>
-                            </div>
+                            <td>@items.OperationType</td>
+                            
 
-
-                        </td>
-                        
-                    </tr>
+                        </tr>
 
                     }
 
@@ -53,23 +41,18 @@
                 <tfoot>
                     <tr>
 
-                        <th>Cost Tittle</th>
                         <th>Operation Type</th>
-                        <th>Action</th>
 
                     </tr>
+
                 </tfoot>
             </table>
         </div>
         <!-- /.card-body -->
     </div>
 
-
-
-
-
-
     @section Scripts {
+
         <script src="~/assets/plugins/jquery/jquery.min.js"></script>
         <!-- Bootstrap 4 -->
         <script src="~/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -90,7 +73,6 @@
         <script src="~/assets/dist/js/adminlte.min.js"></script>
         <!-- AdminLTE for demo purposes -->
         <!-- Page specific script -->
-
         <script>
         $(function () {
             $('.stitchdetails').click(function () {
@@ -98,7 +80,7 @@
                 var Stylename = $(this).data('text');
                 if (confirm("Are you Sure to Delete " + Stylename +" ?")) {
                     $(this).closest("tr").remove();
-                    $.getJSON('@Url.Action("DeleteCost")', { id: Styleid }, function (subheads) {
+                    $.getJSON('@Url.Action("DeleteWorker")', { id: Styleid }, function (subheads) {
                         if (subheads == 1 ) {
                             alert("Successfull");
                         };
@@ -119,12 +101,10 @@
                     "responsive": true, "lengthChange": false, "autoWidth": false,
                     "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
                 }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+
             });
         </script>
     }
-
-
-
 </body>
 </html>
 
