--- a/Areas/Management/Views/Shared/_AdminDashboard.cshtml
+++ b/Areas/Management/Views/Shared/_AdminDashboard.cshtml
@@ -175,7 +175,8 @@
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
             <a href="../Home/Index" class="brand-link">
-                <img src="https://scontent.fdac8-1.fna.fbcdn.net/v/t39.30808-6/261770839_621274942630924_2550490191846627397_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeFWrI5FAX5vYWYXCrMDvCfur0mqU7BOaCyvSapTsE5oLF_zK-g3GZH-rR89rn_hzQcoURzRh-rF6_RoA8z1iHiY&_nc_ohc=zComXtrAh-kAX_zIOBs&_nc_ht=scontent.fdac8-1.fna&oh=00_AT8or4JZlmymF60Y-vN1qsefcq_ERPeJtGcZ5KjhrdAP0A&oe=62A11DC7" alt="CodesWeaver Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+                <img src="https://scontent.fdac8-1.fna.fbcdn.net/v/t39.30808-6/261770839_621274942630924_2550490191846627397_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=9FkDaBABaMMAX9R3H8O&_nc_ht=scontent.fdac8-1.fna&oh=00_AT86d4k_Ao_f_uRB-bWzOOHsAX_vc1lcn96b4ume3ZWUHw&oe=62ACFB47" 
+                     alt="CodesWeaver Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
                 <span class="brand-text font-weight-light">Purity</span>
             </a>
 
