--- a/Areas/Management/Views/Inventory/EditProduct.cshtml
+++ b/Areas/Management/Views/Inventory/EditProduct.cshtml
@@ -17,6 +17,10 @@
                     <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Product Tittle" asp-for="ProductTittle">
                 </div>
                 <div class="form-group">
+                    <label for="exampleInputPassword1">Product Code</label>
+                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Product Code" asp-for="ProductCode">
+                </div>
+                <div class="form-group">
                     <label for="exampleInputPassword1">Costing price</label>
                     <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Costing price" asp-for="CostingPrice">
                 </div>
