--- a/Areas/Management/Views/Inventory/ProductDetails.cshtml
+++ b/Areas/Management/Views/Inventory/ProductDetails.cshtml
@@ -14,6 +14,12 @@
             @Html.DisplayFor(model => model.ProductTittle)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductCode)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ProductCode)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CostingPrice)
         </dt>
         <dd class="col-sm-10">
@@ -43,7 +49,7 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.RemainingQty)
         </dd>
-      
+
     </dl>
 </div>
 <div>
