--- a/Areas/Management/Views/PreModule/EditCostType.cshtml
+++ b/Areas/Management/Views/PreModule/EditCostType.cshtml
@@ -14,6 +14,9 @@
         <form asp-action="EditCostType" method="post">
             <div class="card-body">
                 <div class="form-group">
+                    <input type="hidden" class="form-control" asp-for="CostId">
+                </div>
+                <div class="form-group">
                     <label for="exampleInputPassword1">Cost Tittle</label>
                     <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Cost Tittle" asp-for="Costtittle">
                 </div>
